<resources>
    <string name="app_name">SmartSafe</string>
    <string name="locker_status">Locker Status: </string>
    <string name="open_locker">Open Locker</string>
    <string name="set_password">Set Password</string>
    <string name="show_history">Show History</string>
    <string name="alerts_notification_channel_id">alert</string>
    <string name="alerts_notification_channel_name">Security Alerts</string>
    <string name="alerts_channel_description">Notification Channel for important security alerts</string>
    <string name="image_of_the_intruder">Image of the intruder</string>
    <string name="logo_description">App logo</string>
    <string name="login_text">Login</string>
    <string name="email_hint">Enter Email Address</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password_text">Forgot Password ?</string>
    <string name="register_text">Register an account</string>
    <string name="register_button_text">Register</string>
    <string name="logout">Logout</string>
    <string name="preference_file_key">ProjectKeys</string>
    <string name="arduino_id_key">Arduino_ID</string>
    <string name="app_token_key">App_Token</string>
    <string name="set_reset_pin">Set/Reset PIN</string>
    <string name="enter_new_pin">Enter New PIN</string>
    <string name="enter_arduino_ID">Enter Arduino ID to link</string>
    <string name="view_history">View Access History</string>
    <string name="unlock_locker">Unlock Locker</string>
    <string name="enter_pin">Enter PIN</string>
</resources>